tests/fixtures/valid/crazy/builtins/repr.py
# Valid repr() calls
# Auto-generated by scripts/generate_tests.py

b0_repr_int = repr(1)
b1_repr_float = repr(1.0)
b2_repr_bool = repr(True)
b3_repr_str = repr("hello")
b4_repr_bytes = repr(b"hello")
b5_repr_list = repr([1, 2, 3])
b6_repr_dict = repr({"a": 1})
b7_repr_set = repr({1, 2, 3})
b8_repr_none = repr(None)

print("repr() tests passed!")
